syntax = "proto3";
option csharp_namespace = "MySpace.Application.Note";
import "models/category_model.proto";
import "models/member_model.proto";
package my_space;

message NewNoteReq {
	string title=2;	
	string description=3;	
	int32 category_id = 4;
	int32 creator_id = 5;
}
message NewNoteData {
	int32  id =1;
	string title=2;	
	string description=3;	
	int32 category_id = 4;
	int32 creator_id = 5;
	string created_at =6;
}

message EditNote {
	int32  id =1;
	string title=2;	
	string description=3;	
	int32 category_id = 4;
	int32 creator_id = 5;
}

message DeleteNoteRequest{
	int32  id =1;
}
message DeleteNote{
	bool   success = 1;
    string message = 2;
}

message NoteDataRequest {
	int32  id =1;
}
message NoteData {
	int32  id =1;
	string title=2;	
	string description=3;	
	OneCategoryData Category = 4;
	GetMemberByIdResponse Creator = 5;
	string created_at =6;
}

message ListNotesRequest{
	
}
message ListNotes{
	repeated NoteData Note =1;
}







